deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmall-service
  namespace: cad-t4
  labels:
    app: tmall-service
spec:
  replicas: 1
  template:
    metadata:
      name: tmall-service
      labels:
        app: tmall-service
    spec:
      containers:
        - name: tmall-service
          image: registry.cn-shanghai.aliyuncs.com/twisted-fate/tmall-service:26
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: 100Mi
              cpu: 500m
            limits:
              memory: 500Mi
              cpu: 1000m
          livenessProbe:
            httpGet:
              path: /tmall-service/actuator
              port: 8090
              scheme: HTTP
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 8090
              path: /tmall-service/actuator
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always
      hostNetwork: false
  selector:
    matchLabels:
      app: tmall-service
---
apiVersion: v1
kind: Service
metadata:
  name: tmall-service
  namespace: cad-t4
spec:
  selector:
    app: tmall-service
  ports:
    - port: 8090
      targetPort: 8090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tmall-service
  namespace: cad-t4
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/tmall-service/`)
      kind: Rule
      services:
        - name: tmall-service
          port: 8090
